--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: CS Reading Group
-description: CS adjacent reading group
-author: CS Reading Group
+title: ESG Reading Group
+description: ESG reading group
+author: ESG Reading Group
 github: https://github.com/csreadinggroup
-about: We are a journal club started in June 2020 by a bunch of computer science and computer science-adjacent undergraduates. 
+about: started in Nov 2023. 
 
 enableTags: true
 tagarray: []
